snipeit/app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snipeit-service
  namespace: snipeit
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
  selector:
    app: snipeit
  type: ClusterIP
