snipeit/app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snipeit-ingress
  namespace: snipeit-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  rules:
    - host: snipeit.rke
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snipeit-service
                port:
                  number: 80
